compiler/weave_syntax/tests/data/Tokens.error
error: unexpected token 'bool'
        --> <source>:1:1
         |
       1 | bool
         | ^^^^
error: unexpected token 'char'
        --> <source>:2:1
         |
       2 | char
         | ^^^^
error: unexpected token 'char16'
        --> <source>:3:1
         |
       3 | char16
         | ^^^^^^
error: unexpected token 'char32'
        --> <source>:4:1
         |
       4 | char32
         | ^^^^^^
error: unexpected token 'char8'
        --> <source>:5:1
         |
       5 | char8
         | ^^^^^
error: unexpected token 'decimal128'
        --> <source>:6:1
         |
       6 | decimal128
         | ^^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:7:1
         |
       7 | decimal32
         | ^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:8:1
         |
       8 | decimal64
         | ^^^^^^^^^
error: unexpected token 'float16'
        --> <source>:9:1
         |
       9 | float16
         | ^^^^^^^
error: unexpected token 'float32'
        --> <source>:10:1
         |
      10 | float32
         | ^^^^^^^
error: unexpected token 'float64'
        --> <source>:11:1
         |
      11 | float64
         | ^^^^^^^
error: unexpected token 'int128'
        --> <source>:12:1
         |
      12 | int128
         | ^^^^^^
error: unexpected token 'int16'
        --> <source>:13:1
         |
      13 | int16
         | ^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:14:1
         |
      14 | int256
         | ^^^^^^
error: unexpected token 'int32'
        --> <source>:15:1
         |
      15 | int32
         | ^^^^^
error: unexpected token 'int64'
        --> <source>:16:1
         |
      16 | int64
         | ^^^^^
error: unexpected token 'int8'
        --> <source>:17:1
         |
      17 | int8
         | ^^^^
error: unexpected token '[token::identifier]'
        --> <source>:18:1
         |
      18 | iptr
         | ^^^^
error: unexpected token 'isize'
        --> <source>:19:1
         |
      19 | isize
         | ^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:20:1
         |
      20 | object
         | ^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:21:1
         |
      21 | string
         | ^^^^^^
error: unexpected token 'uint128'
        --> <source>:22:1
         |
      22 | uint128
         | ^^^^^^^
error: unexpected token 'uint16'
        --> <source>:23:1
         |
      23 | uint16
         | ^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:24:1
         |
      24 | uint256
         | ^^^^^^^
error: unexpected token 'uint32'
        --> <source>:25:1
         |
      25 | uint32
         | ^^^^^^
error: unexpected token 'uint64'
        --> <source>:26:1
         |
      26 | uint64
         | ^^^^^^
error: unexpected token 'uint8'
        --> <source>:27:1
         |
      27 | uint8
         | ^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:28:1
         |
      28 | uptr
         | ^^^^
error: unexpected token 'usize'
        --> <source>:29:1
         |
      29 | usize
         | ^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:30:1
         |
      30 | void
         | ^^^^
error: unexpected token 'byte'
        --> <source>:31:1
         |
      31 | byte
         | ^^^^
error: unexpected token 'and'
        --> <source>:32:1
         |
      32 | and
         | ^^^
error: unexpected token 'and_eq'
        --> <source>:33:1
         |
      33 | and_eq
         | ^^^^^^
error: unexpected token 'or'
        --> <source>:34:1
         |
      34 | or
         | ^^
error: unexpected token 'or_eq'
        --> <source>:35:1
         |
      35 | or_eq
         | ^^^^^
error: unexpected token 'xor'
        --> <source>:36:1
         |
      36 | xor
         | ^^^
error: unexpected token 'xor_eq'
        --> <source>:37:1
         |
      37 | xor_eq
         | ^^^^^^
error: unexpected token 'not'
        --> <source>:38:1
         |
      38 | not
         | ^^^
error: unexpected token 'not_eq'
        --> <source>:39:1
         |
      39 | not_eq
         | ^^^^^^
error: unexpected token 'bit_and'
        --> <source>:40:1
         |
      40 | bit_and
         | ^^^^^^^
error: unexpected token 'bit_or'
        --> <source>:41:1
         |
      41 | bit_or
         | ^^^^^^
error: unexpected token 'bit_compl'
        --> <source>:42:1
         |
      42 | bit_compl
         | ^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:43:1
         |
      43 | __column__
         | ^^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:44:1
         |
      44 | __file__
         | ^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:45:1
         |
      45 | __function__
         | ^^^^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:46:1
         |
      46 | __function_pretty__
         | ^^^^^^^^^^^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:47:1
         |
      47 | __line__
         | ^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:48:1
         |
      48 | __module__
         | ^^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:49:1
         |
      49 | __source_location__
         | ^^^^^^^^^^^^^^^^^^^
error: unexpected token 'abstract'
        --> <source>:50:1
         |
      50 | abstract
         | ^^^^^^^^
error: unexpected token 'add'
        --> <source>:51:1
         |
      51 | add
         | ^^^
error: unexpected token 'addressof'
        --> <source>:52:1
         |
      52 | addressof
         | ^^^^^^^^^
error: unexpected token 'addrspace'
        --> <source>:53:1
         |
      53 | addrspace
         | ^^^^^^^^^
error: unexpected token 'alias'
        --> <source>:54:1
         |
      54 | alias
         | ^^^^^
error: unexpected token 'align'
        --> <source>:55:1
         |
      55 | align
         | ^^^^^
error: unexpected token 'alignas'
        --> <source>:56:1
         |
      56 | alignas
         | ^^^^^^^
error: unexpected token 'alignof'
        --> <source>:57:1
         |
      57 | alignof
         | ^^^^^^^
error: unexpected token 'array'
        --> <source>:58:1
         |
      58 | array
         | ^^^^^
error: unexpected token 'as'
        --> <source>:59:1
         |
      59 | as
         | ^^
error: unexpected token 'assembly'
        --> <source>:60:1
         |
      60 | assembly
         | ^^^^^^^^
error: unexpected token 'assert'
        --> <source>:61:1
         |
      61 | assert
         | ^^^^^^
error: unexpected token 'assume'
        --> <source>:62:1
         |
      62 | assume
         | ^^^^^^
error: unexpected token 'async'
        --> <source>:63:1
         |
      63 | async
         | ^^^^^
error: unexpected token 'atomic'
        --> <source>:64:1
         |
      64 | atomic
         | ^^^^^^
error: unexpected token 'attribute'
        --> <source>:65:1
         |
      65 | attribute
         | ^^^^^^^^^
error: unexpected token 'auto'
        --> <source>:66:1
         |
      66 | auto
         | ^^^^
error: unexpected token 'available'
        --> <source>:67:1
         |
      67 | available
         | ^^^^^^^^^
error: unexpected token 'await'
        --> <source>:68:1
         |
      68 | await
         | ^^^^^
error: unexpected token 'base'
        --> <source>:69:1
         |
      69 | base
         | ^^^^
error: unexpected token 'become'
        --> <source>:70:1
         |
      70 | become
         | ^^^^^^
error: unexpected token 'bitcast'
        --> <source>:71:1
         |
      71 | bitcast
         | ^^^^^^^
error: unexpected token 'body'
        --> <source>:72:1
         |
      72 | body
         | ^^^^
error: unexpected token 'borrow'
        --> <source>:73:1
         |
      73 | borrow
         | ^^^^^^
error: unexpected token 'box'
        --> <source>:74:1
         |
      74 | box
         | ^^^
error: unexpected token 'break'
        --> <source>:75:1
         |
      75 | break
         | ^^^^^
error: unexpected token 'callconv'
        --> <source>:76:1
         |
      76 | callconv
         | ^^^^^^^^
error: unexpected token 'case'
        --> <source>:77:1
         |
      77 | case
         | ^^^^
error: unexpected token 'cast'
        --> <source>:78:1
         |
      78 | cast
         | ^^^^
error: unexpected token 'checked'
        --> <source>:79:1
         |
      79 | checked
         | ^^^^^^^
error: unexpected token 'class'
        --> <source>:80:1
         |
      80 | class
         | ^^^^^
error: unexpected token 'columnmajor'
        --> <source>:81:1
         |
      81 | columnmajor
         | ^^^^^^^^^^^
error: unexpected token 'compile'
        --> <source>:82:1
         |
      82 | compile
         | ^^^^^^^
error: unexpected token 'concept'
        --> <source>:83:1
         |
      83 | concept
         | ^^^^^^^
error: unexpected token 'const'
        --> <source>:84:1
         |
      84 | const
         | ^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:85:1
         |
      85 | ctor
         | ^^^^
error: unexpected token 'continue'
        --> <source>:86:1
         |
      86 | continue
         | ^^^^^^^^
error: unexpected token 'contravariant'
        --> <source>:87:1
         |
      87 | contravariant
         | ^^^^^^^^^^^^^
error: unexpected token 'covariant'
        --> <source>:88:1
         |
      88 | covariant
         | ^^^^^^^^^
error: unexpected token 'debug'
        --> <source>:89:1
         |
      89 | debug
         | ^^^^^
error: unexpected token 'default'
        --> <source>:90:1
         |
      90 | default
         | ^^^^^^^
error: unexpected token 'defer'
        --> <source>:91:1
         |
      91 | defer
         | ^^^^^
error: unexpected token 'delegate'
        --> <source>:92:1
         |
      92 | delegate
         | ^^^^^^^^
error: unexpected token 'delete'
        --> <source>:93:1
         |
      93 | delete
         | ^^^^^^
error: unexpected token 'deprecated'
        --> <source>:94:1
         |
      94 | deprecated
         | ^^^^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:95:1
         |
      95 | dtor
         | ^^^^
error: unexpected token 'discard'
        --> <source>:96:1
         |
      96 | discard
         | ^^^^^^^
error: unexpected token 'do'
        --> <source>:97:1
         |
      97 | do
         | ^^
error: unexpected token 'drop'
        --> <source>:98:1
         |
      98 | drop
         | ^^^^
error: unexpected token 'dynamic'
        --> <source>:99:1
         |
      99 | dynamic
         | ^^^^^^^
error: unexpected token 'eager'
        --> <source>:100:1
         |
     100 | eager
         | ^^^^^
error: unexpected token 'else'
        --> <source>:101:1
         |
     101 | else
         | ^^^^
error: unexpected token 'enum'
        --> <source>:102:1
         |
     102 | enum
         | ^^^^
error: unexpected token 'event'
        --> <source>:103:1
         |
     103 | event
         | ^^^^^
error: unexpected token 'except'
        --> <source>:104:1
         |
     104 | except
         | ^^^^^^
error: unexpected token 'explicit'
        --> <source>:105:1
         |
     105 | explicit
         | ^^^^^^^^
error: unexpected token 'export'
        --> <source>:106:1
         |
     106 | export
         | ^^^^^^
error: unexpected token 'expression'
        --> <source>:107:1
         |
     107 | expression
         | ^^^^^^^^^^
error: unexpected token 'extension'
        --> <source>:108:1
         |
     108 | extension
         | ^^^^^^^^^
error: unexpected token 'extern'
        --> <source>:109:1
         |
     109 | extern
         | ^^^^^^
error: unexpected token 'false'
        --> <source>:110:1
         |
     110 | false
         | ^^^^^
error: unexpected token 'field'
        --> <source>:111:1
         |
     111 | field
         | ^^^^^
error: unexpected token 'file'
        --> <source>:112:1
         |
     112 | file
         | ^^^^
error: unexpected token 'final'
        --> <source>:113:1
         |
     113 | final
         | ^^^^^
error: unexpected token 'finally'
        --> <source>:114:1
         |
     114 | finally
         | ^^^^^^^
error: unexpected token 'fixed'
        --> <source>:115:1
         |
     115 | fixed
         | ^^^^^
error: unexpected token 'for'
        --> <source>:116:1
         |
     116 | for
         | ^^^
error: unexpected token 'force'
        --> <source>:117:1
         |
     117 | force
         | ^^^^^
error: unexpected token 'foreach'
        --> <source>:118:1
         |
     118 | foreach
         | ^^^^^^^
error: unexpected token 'fraction'
        --> <source>:119:1
         |
     119 | fraction
         | ^^^^^^^^
error: unexpected token 'fragment'
        --> <source>:120:1
         |
     120 | fragment
         | ^^^^^^^^
error: unexpected token 'friend'
        --> <source>:121:1
         |
     121 | friend
         | ^^^^^^
error: unexpected token 'from'
        --> <source>:122:1
         |
     122 | from
         | ^^^^
error: unexpected token 'function'
        --> <source>:123:1
         |
     123 | function
         | ^^^^^^^^
error: unexpected token 'generic'
        --> <source>:124:1
         |
     124 | generic
         | ^^^^^^^
error: unexpected token 'get'
        --> <source>:125:1
         |
     125 | get
         | ^^^
error: unexpected token 'global'
        --> <source>:126:1
         |
     126 | global
         | ^^^^^^
error: unexpected token 'goto'
        --> <source>:127:1
         |
     127 | goto
         | ^^^^
error: unexpected token 'groupshared'
        --> <source>:128:1
         |
     128 | groupshared
         | ^^^^^^^^^^^
error: unexpected token 'if'
        --> <source>:129:1
         |
     129 | if
         | ^^
error: unexpected token 'immutable'
        --> <source>:130:1
         |
     130 | immutable
         | ^^^^^^^^^
error: unexpected token 'implementation'
        --> <source>:131:1
         |
     131 | implementation
         | ^^^^^^^^^^^^^^
error: unexpected token 'implicit'
        --> <source>:132:1
         |
     132 | implicit
         | ^^^^^^^^
error: unexpected token 'import'
        --> <source>:133:1
         |
     133 | import
         | ^^^^^^
error: unexpected token 'in'
        --> <source>:134:1
         |
     134 | in
         | ^^
error: unexpected token 'inherit'
        --> <source>:135:1
         |
     135 | inherit
         | ^^^^^^^
error: unexpected token 'inject'
        --> <source>:136:1
         |
     136 | inject
         | ^^^^^^
error: unexpected token 'inline'
        --> <source>:137:1
         |
     137 | inline
         | ^^^^^^
error: unexpected token 'inout'
        --> <source>:138:1
         |
     138 | inout
         | ^^^^^
error: unexpected token 'interface'
        --> <source>:139:1
         |
     139 | interface
         | ^^^^^^^^^
error: unexpected token 'internal'
        --> <source>:140:1
         |
     140 | internal
         | ^^^^^^^^
error: unexpected token 'invariant'
        --> <source>:141:1
         |
     141 | invariant
         | ^^^^^^^^^
error: unexpected token 'is'
        --> <source>:142:1
         |
     142 | is
         | ^^
error: unexpected token 'lazy'
        --> <source>:143:1
         |
     143 | lazy
         | ^^^^
error: unexpected token 'let'
        --> <source>:144:1
         |
     144 | let
         | ^^^
error: unexpected token 'likely'
        --> <source>:145:1
         |
     145 | likely
         | ^^^^^^
error: unexpected token 'linksection'
        --> <source>:146:1
         |
     146 | linksection
         | ^^^^^^^^^^^
error: unexpected token 'lock'
        --> <source>:147:1
         |
     147 | lock
         | ^^^^
error: unexpected token 'loop'
        --> <source>:148:1
         |
     148 | loop
         | ^^^^
error: unexpected token 'macro'
        --> <source>:149:1
         |
     149 | macro
         | ^^^^^
error: unexpected token 'managed'
        --> <source>:150:1
         |
     150 | managed
         | ^^^^^^^
error: unexpected token 'match'
        --> <source>:151:1
         |
     151 | match
         | ^^^^^
error: unexpected token 'matrix'
        --> <source>:152:1
         |
     152 | matrix
         | ^^^^^^
error: unexpected token 'member'
        --> <source>:153:1
         |
     153 | member
         | ^^^^^^
error: unexpected token 'meta'
        --> <source>:154:1
         |
     154 | meta
         | ^^^^
error: unexpected token 'mixin'
        --> <source>:155:1
         |
     155 | mixin
         | ^^^^^
error: unexpected token 'module'
        --> <source>:156:1
         |
     156 | module
         | ^^^^^^
error: unexpected token 'move'
        --> <source>:157:1
         |
     157 | move
         | ^^^^
error: unexpected token 'mutable'
        --> <source>:158:1
         |
     158 | mutable
         | ^^^^^^^
error: unexpected token 'nameof'
        --> <source>:159:1
         |
     159 | nameof
         | ^^^^^^
error: unexpected token 'native', expected '[token::identifier]'
        --> <source>:161:1
         |
     161 | native
         | ^^^^^^
error: unexpected token 'native', expected '{'
        --> <source>:161:1
         |
     161 | native
         | ^^^^^^
error: unexpected token 'native'
        --> <source>:161:1
         |
     161 | native
         | ^^^^^^
error: unexpected token 'new'
        --> <source>:162:1
         |
     162 | new
         | ^^^
error: unexpected token 'noalias'
        --> <source>:163:1
         |
     163 | noalias
         | ^^^^^^^
error: unexpected token 'nodiscard'
        --> <source>:164:1
         |
     164 | nodiscard
         | ^^^^^^^^^
error: unexpected token 'noinline'
        --> <source>:165:1
         |
     165 | noinline
         | ^^^^^^^^
error: unexpected token 'noreturn'
        --> <source>:166:1
         |
     166 | noreturn
         | ^^^^^^^^
error: unexpected token 'nosuspend'
        --> <source>:167:1
         |
     167 | nosuspend
         | ^^^^^^^^^
error: unexpected token 'notnull'
        --> <source>:168:1
         |
     168 | notnull
         | ^^^^^^^
error: unexpected token 'null'
        --> <source>:169:1
         |
     169 | null
         | ^^^^
error: unexpected token 'nullable'
        --> <source>:170:1
         |
     170 | nullable
         | ^^^^^^^^
error: unexpected token 'offsetof'
        --> <source>:171:1
         |
     171 | offsetof
         | ^^^^^^^^
error: unexpected token 'operator'
        --> <source>:172:1
         |
     172 | operator
         | ^^^^^^^^
error: unexpected token 'opaque'
        --> <source>:173:1
         |
     173 | opaque
         | ^^^^^^
error: unexpected token 'optional'
        --> <source>:174:1
         |
     174 | optional
         | ^^^^^^^^
error: unexpected token 'out'
        --> <source>:175:1
         |
     175 | out
         | ^^^
error: unexpected token 'overload'
        --> <source>:176:1
         |
     176 | overload
         | ^^^^^^^^
error: unexpected token 'override'
        --> <source>:177:1
         |
     177 | override
         | ^^^^^^^^
error: unexpected token 'package'
        --> <source>:178:1
         |
     178 | package
         | ^^^^^^^
error: unexpected token 'packed'
        --> <source>:179:1
         |
     179 | packed
         | ^^^^^^
error: unexpected token 'parallel'
        --> <source>:180:1
         |
     180 | parallel
         | ^^^^^^^^
error: unexpected token 'params'
        --> <source>:181:1
         |
     181 | params
         | ^^^^^^
error: unexpected token 'partial'
        --> <source>:182:1
         |
     182 | partial
         | ^^^^^^^
error: unexpected token 'pragma'
        --> <source>:183:1
         |
     183 | pragma
         | ^^^^^^
error: unexpected token 'precise'
        --> <source>:184:1
         |
     184 | precise
         | ^^^^^^^
error: unexpected token 'private'
        --> <source>:185:1
         |
     185 | private
         | ^^^^^^^
error: unexpected token 'property'
        --> <source>:186:1
         |
     186 | property
         | ^^^^^^^^
error: unexpected token 'protected'
        --> <source>:187:1
         |
     187 | protected
         | ^^^^^^^^^
error: unexpected token 'public'
        --> <source>:188:1
         |
     188 | public
         | ^^^^^^
error: unexpected token 'pure'
        --> <source>:189:1
         |
     189 | pure
         | ^^^^
error: unexpected token 'raise'
        --> <source>:190:1
         |
     190 | raise
         | ^^^^^
error: unexpected token 'readonly'
        --> <source>:191:1
         |
     191 | readonly
         | ^^^^^^^^
error: unexpected token 'record'
        --> <source>:192:1
         |
     192 | record
         | ^^^^^^
error: unexpected token 'recursive'
        --> <source>:193:1
         |
     193 | recursive
         | ^^^^^^^^^
error: unexpected token 'ref'
        --> <source>:194:1
         |
     194 | ref
         | ^^^
error: unexpected token 'reflect'
        --> <source>:195:1
         |
     195 | reflect
         | ^^^^^^^
error: unexpected token 'register'
        --> <source>:196:1
         |
     196 | register
         | ^^^^^^^^
error: unexpected token 'reinterpret'
        --> <source>:197:1
         |
     197 | reinterpret
         | ^^^^^^^^^^^
error: unexpected token 'remove'
        --> <source>:198:1
         |
     198 | remove
         | ^^^^^^
error: unexpected token 'require'
        --> <source>:199:1
         |
     199 | require
         | ^^^^^^^
error: unexpected token 'required'
        --> <source>:200:1
         |
     200 | required
         | ^^^^^^^^
error: unexpected token 'resume'
        --> <source>:201:1
         |
     201 | resume
         | ^^^^^^
error: unexpected token 'retain'
        --> <source>:202:1
         |
     202 | retain
         | ^^^^^^
error: unexpected token 'return'
        --> <source>:203:1
         |
     203 | return
         | ^^^^^^
error: unexpected token 'rowmajor'
        --> <source>:204:1
         |
     204 | rowmajor
         | ^^^^^^^^
error: unexpected token 'saturate'
        --> <source>:205:1
         |
     205 | saturate
         | ^^^^^^^^
error: unexpected token 'scalar'
        --> <source>:206:1
         |
     206 | scalar
         | ^^^^^^
error: unexpected token 'scope'
        --> <source>:207:1
         |
     207 | scope
         | ^^^^^
error: unexpected token 'section'
        --> <source>:208:1
         |
     208 | section
         | ^^^^^^^
error: unexpected token 'self'
        --> <source>:209:1
         |
     209 | self
         | ^^^^
error: unexpected token 'set'
        --> <source>:210:1
         |
     210 | set
         | ^^^
error: unexpected token 'shared'
        --> <source>:211:1
         |
     211 | shared
         | ^^^^^^
error: unexpected token 'sizeof'
        --> <source>:212:1
         |
     212 | sizeof
         | ^^^^^^
error: unexpected token 'slice'
        --> <source>:213:1
         |
     213 | slice
         | ^^^^^
error: unexpected token 'stackalloc'
        --> <source>:214:1
         |
     214 | stackalloc
         | ^^^^^^^^^^
error: unexpected token 'static'
        --> <source>:215:1
         |
     215 | static
         | ^^^^^^
error: unexpected token 'super', expected '[token::identifier]'
        --> <source>:217:1
         |
     217 | super
         | ^^^^^
error: unexpected token 'super', expected '{'
        --> <source>:217:1
         |
     217 | super
         | ^^^^^
error: unexpected token 'super', expected '}'
        --> <source>:217:1
         |
     217 | super
         | ^^^^^
error: unexpected token 'super', expected ';'
        --> <source>:217:1
         |
     217 | super
         | ^^^^^
error: unexpected token 'super'
        --> <source>:217:1
         |
     217 | super
         | ^^^^^
error: unexpected token 'suspend'
        --> <source>:218:1
         |
     218 | suspend
         | ^^^^^^^
error: unexpected token 'switch'
        --> <source>:219:1
         |
     219 | switch
         | ^^^^^^
error: unexpected token 'synchronized'
        --> <source>:220:1
         |
     220 | synchronized
         | ^^^^^^^^^^^^
error: unexpected token 'tailcall'
        --> <source>:221:1
         |
     221 | tailcall
         | ^^^^^^^^
error: unexpected token 'template'
        --> <source>:222:1
         |
     222 | template
         | ^^^^^^^^
error: unexpected token 'test'
        --> <source>:223:1
         |
     223 | test
         | ^^^^
error: unexpected token 'this'
        --> <source>:224:1
         |
     224 | this
         | ^^^^
error: unexpected token 'threadlocal'
        --> <source>:225:1
         |
     225 | threadlocal
         | ^^^^^^^^^^^
error: unexpected token 'trait'
        --> <source>:226:1
         |
     226 | trait
         | ^^^^^
error: unexpected token 'transfer'
        --> <source>:227:1
         |
     227 | transfer
         | ^^^^^^^^
error: unexpected token 'true'
        --> <source>:228:1
         |
     228 | true
         | ^^^^
error: unexpected token 'try'
        --> <source>:229:1
         |
     229 | try
         | ^^^
error: unexpected token 'tuple'
        --> <source>:230:1
         |
     230 | tuple
         | ^^^^^
error: unexpected token 'type'
        --> <source>:231:1
         |
     231 | type
         | ^^^^
error: unexpected token 'typeof'
        --> <source>:232:1
         |
     232 | typeof
         | ^^^^^^
error: unexpected token 'unaligned'
        --> <source>:233:1
         |
     233 | unaligned
         | ^^^^^^^^^
error: unexpected token 'unbox'
        --> <source>:234:1
         |
     234 | unbox
         | ^^^^^
error: unexpected token 'unchecked'
        --> <source>:235:1
         |
     235 | unchecked
         | ^^^^^^^^^
error: unexpected token 'undefined'
        --> <source>:236:1
         |
     236 | undefined
         | ^^^^^^^^^
error: unexpected token 'uniform'
        --> <source>:237:1
         |
     237 | uniform
         | ^^^^^^^
error: unexpected token 'union'
        --> <source>:238:1
         |
     238 | union
         | ^^^^^
error: unexpected token 'unlikely'
        --> <source>:239:1
         |
     239 | unlikely
         | ^^^^^^^^
error: unexpected token 'unmanaged'
        --> <source>:240:1
         |
     240 | unmanaged
         | ^^^^^^^^^
error: unexpected token 'unreachable'
        --> <source>:241:1
         |
     241 | unreachable
         | ^^^^^^^^^^^
error: unexpected token 'unsafe'
        --> <source>:242:1
         |
     242 | unsafe
         | ^^^^^^
error: unexpected token 'unsized'
        --> <source>:243:1
         |
     243 | unsized
         | ^^^^^^^
error: using statement must precede all other elements defined in namespace
        --> <source>:244:1
         |
     244 | using
         | ^^^^^
error: unexpected token 'uuidof', expected '[token::identifier]'
        --> <source>:245:1
         |
     245 | uuidof
         | ^^^^^^
error: unexpected token 'uuidof', expected ';'
        --> <source>:245:1
         |
     245 | uuidof
         | ^^^^^^
error: unexpected token 'uuidof'
        --> <source>:245:1
         |
     245 | uuidof
         | ^^^^^^
error: unexpected token 'value'
        --> <source>:246:1
         |
     246 | value
         | ^^^^^
error: unexpected token 'var'
        --> <source>:247:1
         |
     247 | var
         | ^^^
error: unexpected token 'vector'
        --> <source>:248:1
         |
     248 | vector
         | ^^^^^^
error: unexpected token 'vendor'
        --> <source>:249:1
         |
     249 | vendor
         | ^^^^^^
error: unexpected token 'version'
        --> <source>:250:1
         |
     250 | version
         | ^^^^^^^
error: unexpected token 'virtual'
        --> <source>:251:1
         |
     251 | virtual
         | ^^^^^^^
error: unexpected token 'volatile'
        --> <source>:252:1
         |
     252 | volatile
         | ^^^^^^^^
error: unexpected token 'vtable'
        --> <source>:253:1
         |
     253 | vtable
         | ^^^^^^
error: unexpected token 'when'
        --> <source>:254:1
         |
     254 | when
         | ^^^^
error: unexpected token 'where'
        --> <source>:255:1
         |
     255 | where
         | ^^^^^
error: unexpected token 'while'
        --> <source>:256:1
         |
     256 | while
         | ^^^^^
error: unexpected token 'with'
        --> <source>:257:1
         |
     257 | with
         | ^^^^
error: unexpected token 'yield'
        --> <source>:258:1
         |
     258 | yield
         | ^^^^^
error: unexpected token '~'
        --> <source>:259:1
         |
     259 | ~
         | ^
error: unexpected token '!='
        --> <source>:260:1
         |
     260 | !=
         | ^^
error: unexpected token '!'
        --> <source>:261:1
         |
     261 | !
         | ^
error: unexpected token '+='
        --> <source>:262:1
         |
     262 | +=
         | ^^
error: unexpected token '++'
        --> <source>:263:1
         |
     263 | ++
         | ^^
error: unexpected token '+'
        --> <source>:264:1
         |
     264 | +
         | ^
error: unexpected token '-='
        --> <source>:265:1
         |
     265 | -=
         | ^^
error: unexpected token '--'
        --> <source>:266:1
         |
     266 | --
         | ^^
error: unexpected token '->'
        --> <source>:267:1
         |
     267 | ->
         | ^^
error: unexpected token '-'
        --> <source>:268:1
         |
     268 | -
         | ^
error: unexpected token '*='
        --> <source>:269:1
         |
     269 | *=
         | ^^
error: unexpected token '*'
        --> <source>:270:1
         |
     270 | *
         | ^
error: unexpected token '/='
        --> <source>:271:1
         |
     271 | /=
         | ^^
error: unexpected token '/'
        --> <source>:272:1
         |
     272 | /
         | ^
error: unexpected token '['
        --> <source>:273:1
         |
     273 | (
         | ^
error: unexpected token ')'
        --> <source>:274:1
         |
     274 | )
         | ^
error: unexpected token '{'
        --> <source>:275:1
         |
     275 | {
         | ^
error: unexpected token '['
        --> <source>:277:1
         |
     277 | [
         | ^
error: unexpected token ']'
        --> <source>:278:1
         |
     278 | ]
         | ^
error: unexpected token '::'
        --> <source>:279:1
         |
     279 | ::
         | ^^
error: unexpected token ':'
        --> <source>:280:1
         |
     280 | :
         | ^
error: unexpected token ';'
        --> <source>:281:1
         |
     281 | ;
         | ^
error: unexpected token '@'
        --> <source>:282:1
         |
     282 | @
         | ^
error: unexpected token '$'
        --> <source>:283:1
         |
     283 | $
         | ^
error: unexpected token '%='
        --> <source>:284:1
         |
     284 | %=
         | ^^
error: unexpected token '%'
        --> <source>:285:1
         |
     285 | %
         | ^
error: unexpected token '^'
        --> <source>:286:1
         |
     286 | ^=
         | ^
error: unexpected token '='
        --> <source>:286:2
         |
     286 | ^=
         |  ^
error: unexpected token '^'
        --> <source>:287:1
         |
     287 | ^
         | ^
error: unexpected token '&&'
        --> <source>:288:1
         |
     288 | &&
         | ^^
error: unexpected token '&='
        --> <source>:289:1
         |
     289 | &=
         | ^^
error: unexpected token '&'
        --> <source>:290:1
         |
     290 | &
         | ^
error: unexpected token '=='
        --> <source>:291:1
         |
     291 | ==
         | ^^
error: unexpected token '=>'
        --> <source>:292:1
         |
     292 | =>
         | ^^
error: unexpected token '='
        --> <source>:293:1
         |
     293 | =
         | ^
error: unexpected token '\'
        --> <source>:294:1
         |
     294 | \\
         | ^
error: unexpected token '\'
        --> <source>:294:2
         |
     294 | \\
         |  ^
error: unexpected token '||'
        --> <source>:295:1
         |
     295 | ||
         | ^^
error: unexpected token '|='
        --> <source>:296:1
         |
     296 | |=
         | ^^
error: unexpected token '|'
        --> <source>:297:1
         |
     297 | |
         | ^
error: unexpected token ','
        --> <source>:298:1
         |
     298 | ,
         | ^
error: unexpected token '<='
        --> <source>:299:1
         |
     299 | <=
         | ^^
error: unexpected token '<<='
        --> <source>:300:1
         |
     300 | <<=
         | ^^^
error: unexpected token '<<'
        --> <source>:301:1
         |
     301 | <<
         | ^^
error: unexpected token '<<'
        --> <source>:302:1
         |
     302 | <<<
         | ^^
error: unexpected token '<'
        --> <source>:302:3
         |
     302 | <<<
         |   ^
error: unexpected token '>>'
        --> <source>:303:1
         |
     303 | >>>
         | ^^
error: unexpected token '>'
        --> <source>:303:3
         |
     303 | >>>
         |   ^
error: unexpected token '<'
        --> <source>:304:1
         |
     304 | <
         | ^
error: unexpected token '>='
        --> <source>:305:1
         |
     305 | >=
         | ^^
error: unexpected token '>>='
        --> <source>:306:1
         |
     306 | >>=
         | ^^^
error: unexpected token '>>'
        --> <source>:307:1
         |
     307 | >>
         | ^^
error: unexpected token '>'
        --> <source>:308:1
         |
     308 | >
         | ^
error: unexpected token '??'
        --> <source>:309:1
         |
     309 | ??
         | ^^
error: unexpected token '?'
        --> <source>:310:1
         |
     310 | ?
         | ^
error: unexpected token '...'
        --> <source>:311:1
         |
     311 | ...
         | ^^^
error: unexpected token '..'
        --> <source>:312:1
         |
     312 | ..
         | ^^
error: unexpected token '.'
        --> <source>:313:1
         |
     313 | .
         | ^
error: unexpected token '[token::identifier]'
        --> <source>:314:1
         |
     314 | _
         | ^
error: unexpected token '[token::identifier]'
        --> <source>:315:1
         |
     315 | r#class
         | ^^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:316:1
         |
     316 | r#enum
         | ^^^^^^
error: unexpected token '[token::identifier]'
        --> <source>:317:1
         |
     317 | r#struct
         | ^^^^^^^^
error: unexpected token '[literal:string]'
        --> <source>:318:1
         |
     318 | r"raw string \t"
         | ^^^^^^^^^^^^^^^^
error: unexpected token '[literal:string]'
        --> <source>:319:1
         |
     319 | r#"raw string \n"#
         | ^^^^^^^^^^^^^^^^^^
error: unexpected token '[literal:string]'
        --> <source>:320:1
         |
     320 | r##" r#"inner\nraw\nstring"# "##
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
